[package]
name = "wnfsutils"
version = "1.1.5"
edition = "2021"
description = "WNFS utilities for web applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/wnfs-utils-web"
readme = "README.md"
keywords = ["wnfs", "web", "storage", "encryption"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wnfs = { git = "https://github.com/wnfs-wg/rs-wnfs.git", rev = "491ce8555d811477e934e6a1a6b6e0d347a32357" }
bytes = "1.4.0"
chrono = "0.4.22"
crc32fast = "1.3.2"
tokio_wasi = { version = "1.25", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes"] }
rand = { version = "0.8", features = ["getrandom"] }
libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }
kv = "0.24.0"
rand_core = "0.6.4"
serde = "1.0.149"
serde_json = "1.0.89"
anyhow = "1.0.66"
async-trait = "0.1.58"
log = "0.4.14"
sha3 = "0.10"
futures = "0.3"
rsa = "0.9"
rand_chacha = "0.3"
base64 = "0.13.0"
tempfile = "3.2"
getrandom = { version = "0.2", features = ["js"] }
mio_wasi = "0.8"

# WASM-specific dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
