[package]
name = "wnfsutils"
version = "1.1.6"
edition = "2021"
description = "WNFS utilities for web applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/functionland/wnfs-utils-web"
readme = "README.md"
keywords = ["wnfs", "web", "storage", "encryption"]
categories = ["wasm", "web-programming"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wnfs = { git = "https://github.com/wnfs-wg/rs-wnfs.git", rev = "491ce8555d811477e934e6a1a6b6e0d347a32357" }
bytes = "1.4.0"
chrono = { version = "0.4.22", features = ["wasm-bindgen", "serde"] }
crc32fast = "1.3.2"
rand = { version = "0.8", features = ["getrandom", "std"] }
libipld = { version = "0.16", features = ["dag-cbor", "derive", "serde-codec"] }
kv = "0.24.0"
rand_core = "0.6.4"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
anyhow = "1.0.66"
async-trait = "0.1.58"
log = "0.4.14"
sha3 = "0.10"
futures = "0.3"
rsa = "0.9"
rand_chacha = "0.3"
base64 = "0.22.1"
getrandom = { version = "0.2", features = ["js", "wasm-bindgen"] }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.29.1", default-features = false, features = ["rt"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "=0.2.87"  
wasm-bindgen-futures = "=0.4.37"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "FileSystem"
]}

# Non-WASM dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.29.1", features = ["full", "fs"] }
async-std = { version = "1.12.0", features = ["attributes", "default", "std"] }
tempfile = "3.2"

[features]
default = []
wasm = []
native = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release.package."*"]
opt-level = 3